# ApPredict_GP

./: .cproject  .gitignore  .project  ApdCalculatorApp  CMakeLists.txt  CMakeLists.txt~  README.md  SConscript
MATLAB/: ApPredict_GP.m  EvaluateAPD.m  Fig4Arc.m  README.md  classActiveLearning.m  classActiveLearning.m~  classActiveLearningtest.m  drugBlock.m  getSomeAPD.m  matlab_wrapper.sh  plotGPVsLUTperformance.m  startup.m  surfActiveLearning.m  surfActiveLearningtest.m  testCommunication.m
MATLAB/GPpredict/: GridLabels.txt  XY.txt  activeLearning.m  boundaryDetector.m  boundaryDetectorNormProb.m  build_multi_domains_silly.m  certainty.m  classifierGP.m  contMap.txt  justClassifier.m  labelFinder.m  learnGPhyp.m  plotRandomContours.m  pswplotranges.m  sequentialDesign.m  sequentialDesign.m~  surfaceCertainty.m  surfaceGP.m
MATLAB/HPC/: classCurve.m  classVsInterpolator.m  classVsInterpolator.sh  classlCurve_slurm.sh  did.sh  doScripts.sh  surfCurve.m  surfaceVsInterpolator.m  surfaceVsInterpolator_slurm.sh  surflCurve_slurm.sh
apps/: CMakeLists.txt
src/: ApdFromParameterSet.cpp  ApdFromParameterSet.hpp
test/: CMakeLists.txt  ContinuousTestPack.txt  ContinuousTestPack.txt~  Interpolation Results.csv  ODEsolve.hpp  ODEsolve.hpp~  TestApdFromParameterSet.hpp  TestApdProfile.hpp  TestApdSurface2D.hpp  TestCompareChasteMat.hpp  TestGenerateAPDTestSet.hpp  TestHello.hpp  TestInterpolate.hpp  TestLookupTableArchive.hpp  TestODEsolve.hpp  plot_convergence.m  plot_output_of_APD_profile.m  plot_output_of_APD_profile_gKr.m  plot_output_of_APD_surface_2D.m
(+1133 files in other folders)
